--- a/Frontend/VoizMeet/package.json
+++ b/Frontend/VoizMeet/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "start": "vite preview", 
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -18,6 +19,7 @@
     "http-status": "^2.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.3",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
